[gd_scene load_steps=2 format=3 uid="uid://og50mlvkyoml"]

[ext_resource type="Script" path="res://Functionality/Scripts/druid_menu.gd" id="1_yk1t5"]

[node name="DruidMenu" type="Node2D"]
script = ExtResource("1_yk1t5")

[node name="DruidMenu_BG" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.588235)
offset_left = 69.0
offset_top = 43.0
offset_right = 554.0
offset_bottom = 297.0
color = Color(0.428237, 0.204973, 0.0406361, 1)

[node name="Close" type="Button" parent="DruidMenu_BG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -93.0
offset_bottom = 36.0
grow_horizontal = 0
text = "Close"

[node name="Item1" type="Button" parent="DruidMenu_BG" groups=["Items"]]
layout_mode = 0
offset_left = 60.0
offset_top = 40.0
offset_right = 125.0
offset_bottom = 105.0
metadata/item_index = 0

[node name="Item2" type="Button" parent="DruidMenu_BG" groups=["Items"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_top = 40.0
offset_right = 32.5
offset_bottom = 105.0
grow_horizontal = 2
metadata/item_index = 1

[node name="Item3" type="Button" parent="DruidMenu_BG" groups=["Items"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 117.5
offset_top = 40.0
offset_right = 182.5
offset_bottom = 105.0
grow_horizontal = 2
metadata/item_index = 2

[node name="Item4" type="Button" parent="DruidMenu_BG" groups=["Items"]]
layout_mode = 0
offset_left = 60.0
offset_top = 140.0
offset_right = 125.0
offset_bottom = 205.0
metadata/item_index = 3

[node name="Item5" type="Button" parent="DruidMenu_BG" groups=["Items"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_top = 140.0
offset_right = 32.5
offset_bottom = 205.0
grow_horizontal = 2
metadata/item_index = 4

[node name="Item6" type="Button" parent="DruidMenu_BG" groups=["Items"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 117.5
offset_top = 140.0
offset_right = 182.5
offset_bottom = 205.0
grow_horizontal = 2
metadata/item_index = 5

[connection signal="pressed" from="DruidMenu_BG/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="DruidMenu_BG/Item1" to="." method="_on_item_1_pressed"]
[connection signal="pressed" from="DruidMenu_BG/Item2" to="." method="_on_item_2_pressed"]
[connection signal="pressed" from="DruidMenu_BG/Item3" to="." method="_on_item_3_pressed"]
[connection signal="pressed" from="DruidMenu_BG/Item4" to="." method="_on_item_4_pressed"]
[connection signal="pressed" from="DruidMenu_BG/Item5" to="." method="_on_item_5_pressed"]
[connection signal="pressed" from="DruidMenu_BG/Item6" to="." method="_on_item_6_pressed"]
